Varianta finala a licentei

--- a/DocumentLicenta/Licenta.tex
+++ b/DocumentLicenta/Licenta.tex
@@ -83,7 +83,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{2}
 \begin{abstract}
-\par Având în vedere contextul actual, detectarea anomaliilor în video este un subiect de interes în mai multe arii, în mod special în securitatea publică. Putem spune că această problemă este încă nerezolvată, deoarece sistemele actuale, deocamdată, nu depăşesc  omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari în partea de inferență, făcând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezintă un maxim interes. Astfel, putem spune că dezvoltarea unui sistem capabil să transforme sistemele de supraveghere actuale în sisteme ce pot recunoaşte evenimente anormale  este un subiect ce poate revoluţiona domeniul supravegherii video. Această lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de \emph{Ionescu et al.} \cite{ionescu2019object}, dar optimizată pentru a putea fi rulată pe sisteme cu resurse hardware reduse. Obiectivul este obţinerea unei arhitecturi ce necesită resurse computaţionale reduse şi poate fi rulată atât local, cât şi în cloud, acolo unde este expusă etapa de inferenţă printr-un API. Scopul final este final este creerea unui cadru ce va permite convertirea unui sistem de supraveghere clasic într-unul inteligent doar prin integrarea acestui sistem de detecţie, fără a fi nevoie de schimbarea hardware-ului. Utilizarea unei soluţii PaaS pentru etapa de inferenţă rezolvă problema executării cererilor fără complexitatea creeri şi întreţinerii unei infrastructuri de maşini virtuale sau fizice. 
+\par Având în vedere contextul actual, detectarea anomaliilor în video este un subiect de interes în mai multe arii, în mod special în securitatea publică. Putem spune că această problemă este încă nerezolvată, deoarece sistemele actuale, deocamdată, nu depăşesc  omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari în partea de inferență, făcând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezintă un maxim interes. Astfel, putem spune că dezvoltarea unui sistem capabil să transforme sistemele de supraveghere actuale în sisteme ce pot recunoaşte evenimente anormale  este un subiect ce poate revoluţiona domeniul supravegherii video. Această lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de \emph{Ionescu et al.} \cite{ionescu2019object}, dar optimizată pentru a putea fi rulată pe sisteme cu resurse hardware reduse. Obiectivul este obţinerea unei arhitecturi ce necesită resurse computaţionale reduse şi poate fi rulată atât local, cât şi în cloud, acolo unde este expusă etapa de inferenţă printr-un API. Scopul final este final este crearea unui cadru ce va permite convertirea unui sistem de supraveghere clasic într-unul inteligent doar prin integrarea acestui sistem de detecţie, fără a fi nevoie de schimbarea hardware-ului. Utilizarea unei soluţii PaaS pentru etapa de inferenţă rezolvă problema executării cererilor fără complexitatea creeri şi întreţinerii unei infrastructuri de maşini virtuale sau fizice. 
 \end{abstract}
 
 \chapter{Introducere}
@@ -117,12 +117,12 @@ Folosirea serverelor proprii presupune, pe lângă prezenţa fizică a serverelo
 Folosirea serviciilor cloud oferă multiple posibilităţi de dezvoltare a aplicaţiilor, de la creeare unei infrastructuri complete care este administrată în totalitate de către dezvoltator, la medii de execuţie serverless care sunt complet administrate de către provider-ul de servicii cloud. 
 Deşi creearea unei infrastructuri proprii încă este necesară acolo unde legislaţia nu permite ca datele sa fie stocate în cloud, în toate celelalte cazuri se face migrarea spre soluţii cloud, lucru vizibil şi în evoluţia cotei de piaţă a domeniului cloud-computing la nivel global, aşa cum se poate observa şi în figura ~\ref{fig:cloud_computing_graph}. 
 \section{Alte abordări}
-\quad Detectarea anomaliilor vizuale este un subiect intens cercetat, numeroase lucrări fiind publicate având aceasta arie de interes. În general, detectarea anomaliilor este abordată din perspectiva invăţării evenimentelor normale ca mai apoi să fie detectate evenimentele ce nu se potrivesc şabloanelor create folosind evenimentele normale \cite{cheng2015,ionescu2019object,sultani2018,smeureanu2018,alexe2018}.
+\quad Detectarea anomaliilor vizuale este un subiect intens cercetat, numeroase lucrări fiind publicate având aceasta arie de interes. În general, detectarea anomaliilor este abordată din perspectiva învăţării evenimentelor normale ca mai apoi să fie detectate evenimentele ce nu se potrivesc şabloanelor create folosind evenimentele normale \cite{cheng2015,ionescu2019object,sultani2018,smeureanu2018,alexe2018}.
 \par Nivelul de supervizare variază destul de mult în abordările existente, fiind atât lucrări ce definesc normalitatea pe baza unor constrângeri \cite{hannah2004,shet2006}, dar şi metode ce se bazează complet pe învăţarea nesupervizată a comportamentului normal \cite{dutta2015,zhao2011}. 
-\par\emph{Antic et al.} \cite{borislav2011} foloseşte o arhitectură în două etape, ce propune evaluarea unui video prin folosirea unui algoritm de separarea a foreground ului de background, pe baza faptului că filmarea este făcută dintr-un punct static. Prin această metoda, acesta obţine o serie de \say{ipoteze} ce urmează mai apoi vor fi analizate şi clasificate prin metode statistice folosind caracteristici spaţio-temporale, dar şi legătura dintre aceasta şi celelalte ipoteze.
+\par\emph{Antic et al.} \cite{borislav2011} foloseşte o arhitectură în două etape, ce propune evaluarea unui video prin folosirea unui algoritm de separarea a foreground ului de background, pe baza faptului că filmarea este făcută dintr-un punct static. Prin această metoda, acesta obţine o serie de \emph{ipoteze} ce urmează mai apoi vor fi analizate şi clasificate prin metode statistice folosind caracteristici spaţio-temporale, dar şi legăturile dintre acestea.
 \par \emph{Lu et al.} \cite{lu2013} foloseşte o reprezentare e evenimentelor folosind o structură piramidală ce reprezintă caracteristicile spaţio-temporale ale evenimentelor prezente într-un cadru. Această reprezentare este obţinută prin scalarea imaginii la diferite dimensiuni şi impărţirea acesteia în regiuni ce nu se suprapun. Regiunile ce corespund aceleiaşi zone din imagine sunt apoi concatenate pentru a obţine reprezentarea. O modalitate asemănatoare de reprezentare a evenimentelor este folosită şi de \emph{Ionescu et al.} \cite{smeureanu2018}.  
-\par \emph{Sultani et al.} \cite{sultani2018} defineşte anomaliile la nivel de video, şi tratează segmente din video drept evenimente în cadrul videoului. Acestea sunt analizate folosind un MIL (\say{multiple instance learning})adânc. Această abordare este minim-supervizată, iar prin etichetarea la nivel de video, în locul etichetelor la nivel de cadru clasice, a fost posibilă creerea si evaluarea pe un set de dimensiuni deosebit de mari, însumând 128 de ore de filmare.
-\par Asemănator metodei alese spre implementare\cite{ionescu2019object}, au fost propuse multiple arhitecturi \cite{sobokrou2017,xu2015} ce propun extragerea caracteristicilor unui eveniment în mod nesupervizat folosind autoencodere. 
+\par \emph{Sultani et al.} \cite{sultani2018} defineşte anomaliile la nivel de video, şi tratează segmente din video drept evenimente în cadrul videoului. Acestea sunt analizate folosind un MIL (\say{multiple instance learning})adânc. Această abordare este minim-supervizată, iar prin etichetarea la nivel de video, în locul etichetelor clasice, la nivel de cadru, a fost posibilă crearea si evaluarea pe un set de dimensiuni deosebit de mari, însumând 128 de ore de filmare.
+\par Asemănator metodei alese spre implementare\cite{ionescu2019object}, au fost propuse multiple arhitecturi \cite{sobokrou2017,xu2015} ce folosesc extragerea caracteristicilor unui eveniment în mod nesupervizat folosind autoencodere. 
 \section{Conţinutul lucrării}
  Ca şi structură, lucrarea este împărţită în 2 părţi:
 \begin{itemize}
@@ -148,7 +148,8 @@ Pentru etapa de antrenare, sistemul trece prin următoarea serie de etape:
 \item Stabileşte k clase de normalitate folosind reprezentările latente
 \item Antrenează k clasificatori de tipul one-versus-rest
 \end{itemize}
-\par Ca prim pas, pentru obţinerea obiectelor dintr-o imagine, atât în etapa de antrenare cât şi în cea de inferenţă este folosit un detector de obiecte pre-antrenat. Un detector de obiecte este un sistem ce primeşte ca input o imagine şi după procesarea acesteia rezolvă problema detecţiei de obiecte şi întoarce poziţiile la care sunt plasate obiectele în imagine, şi etichetele asociate acestora. Deşi detectorul de obiecte face parte din arhitectură, deoarece detectarea de obiecte este un subiect în sine, implementarea unui astfel de algoritm nu face obiectul acestei lucrări. Datorită acestui lucru, este folosit un detector deja antrenat şi testat pe setul de date COCO. 
+\subsection{Autoencoder}
+\quad Ca prim pas, pentru obţinerea obiectelor dintr-o imagine, atât în etapa de antrenare cât şi în cea de inferenţă este folosit un detector de obiecte pre-antrenat. Un detector de obiecte este un sistem ce primeşte ca input o imagine şi după procesarea acesteia rezolvă problema detecţiei de obiecte şi întoarce poziţiile la care sunt plasate obiectele în imagine, şi etichetele asociate acestora. Deşi detectorul de obiecte face parte din arhitectură, deoarece detectarea de obiecte este un subiect în sine, implementarea unui astfel de algoritm nu face obiectul acestei lucrări. Datorită acestui lucru, este folosit un detector deja antrenat şi testat pe setul de date COCO. 
 \par După aceasta etapă sunt antrenate cele două autoencodere convoluţionale. Unul pentru imaginea propriu-zisă şi altul pentru gradient. Un autoencoder este un tip de reţea neuronală alcătuit din 2 parţi (encoder si decoder) care este folosit pentru a obţine reprezentarea latentă a unui obiect folosind un mod de învăţare nesupervizată. În timpul antrenării, autoencoder-ele au ca scop modificarea parametrilor interni pentru a obţine la ieşire, datele primite la intrare. Deşi ieşirea unui autoencoder nu prezintă interes decât în etapa de antrenare, ceea ce este folositor este reprezentarea latentă (rezultatul encoder-ului) a datelor. Folosind această tehnică, se obţine o reducere a dimensionalităţii ce imbunătăţeşte semnificativ performanţele clasificatorilor ulteriori.
 \par 
 
@@ -161,13 +162,21 @@ Pentru etapa de antrenare, sistemul trece prin următoarea serie de etape:
     \end{center}
 \end{wrapfigure}
 
-Operatorul de convoluţie permite întelegerea datelor de intrare prin aplicarea unui kernel, ce extrage informaţia prin combinarea datelor asupra cărora este aplicat, fapt ilustrat în figura ~\ref{fig:convolution_operator}. Autoencoderele tradiţionale nu iau în considerare faptul că un semnal poate fi vazut ca o sumă de alte semnale. Operatorul de convoluţie a fost introdus în acestea tocmai pentru a exploata această posibilitate.  Autoencoderele convoluţionale reprezintă cea mai bună unealtă pentru invăţarea nesupravegheată a filtrelor convoluţionale. Spre deosebire de cazurile în care filtrele convoluţionale sunt construite manual pentru a extrage cât mai bine anumite trasături specifice din imagine, autoencoderele convoluţionale învaţă(construiesc) în mod automat filtrele în perioada de invăţare, având ca scop minimizarea erorii de reconstrucţie. Acestea reprezintă metoda perfectă pentru o obţine o reprezentare compactă a unor date abstracte si multi dimensionale, cum sunt imaginile digitale.\cite{goodfellow2016}
+Operatorul de convoluţie permite întelegerea datelor de intrare prin aplicarea unui kernel, ce extrage informaţia prin combinarea datelor asupra cărora este aplicat, fapt ilustrat în figura ~\ref{fig:convolution_operator}. Autoencoderele tradiţionale nu iau în considerare faptul că un semnal poate fi vazut ca o sumă de alte semnale. Operatorul de convoluţie a fost introdus în acestea tocmai pentru a exploata această posibilitate.  Autoencoderele convoluţionale reprezintă cea mai bună unealtă pentru învăţarea nesupravegheată a filtrelor convoluţionale. Spre deosebire de cazurile în care filtrele convoluţionale sunt construite manual pentru a extrage cât mai bine anumite trasături specifice din imagine, autoencoderele convoluţionale învaţă(construiesc) în mod automat filtrele în perioada de învăţare, având ca scop minimizarea erorii de reconstrucţie. Acestea reprezintă metoda perfectă pentru o obţine o reprezentare compactă a unor date abstracte si multi dimensionale, cum sunt imaginile digitale.\cite{goodfellow2016}
 \par Obţinerea reprezentării latente a fiecărui obiect se realizează trecând imaginea, respectiv gradientul său prin encoderul autoencoderului corespunzător si păstrarea rezultatului.
-\par Odată obţinut vectorul de caracteristici pentru toate obiectele din setul de date, urmează stabilirea claselor de normalitate. Acest lucru se realizează prin aplicarea algoritmului k-means de clustering. Pentru implementare a fost folosit algoritmul \emph{LLoyd} implementat în biblioteca python \emph{sklearn}. Aplicând acest algoritm peste vectorii de caracteristici obţinuţi, rezultă k categorii de normalitate cu vectorii de caracteristici aferenţi. 
-\par Folosind categoriile de normalitate obţinute la pasul anterior, putem spune că faţă de o anumită categorie \emph{i}, celelalte k-1 categorii reprezintă categorii \emph{artificial} anormale. Le numim \emph{artifical} anormale deoarece în mod obiectiv ele sunt acţiuni normale pentru sistemul de dectare a anomaliilor, dar pentru antrenarea unor clasificatori conform schemei one-vs-rest acestea sunt tratate drept anormale. Astfel, putem antrena un clasificator binar g(i) în aşa fel încat să separăm elementele din categoria i de cele din categoriile \{1,2...k\}/i 
-generând funcţia : \[f_{i}(x) = \sum_{1}^{n} w_{j} * x_{j} + b\]. Unde x \(\in{R}^n\) reprezintă vectorul de caracteristici, w este vectorul de parametri a funcţiei, iar b reprezintă bias-ul funcţiei. \cite{ionescu2019object}.
+\subsection{Clusterizare K-means}
+\quad Odată obţinut vectorul de caracteristici pentru toate obiectele din setul de date, urmează stabilirea claselor de normalitate. Acest lucru se realizează prin aplicarea algoritmului k-means de clustering. Pentru implementare a fost folosit algoritmul \emph{LLoyd} implementat în biblioteca python \emph{sklearn}. Aplicând acest algoritm peste vectorii de caracteristici obţinuţi, rezultă k categorii de normalitate cu vectorii de caracteristici aferenţi. 
+\par K-means este un tip de clusterizare ce are ca scop împărţirea a n probe în k grupe. Pentru ca grupele create să reprezinte clase de obiecte cât mai apropiate, algoritmul are ca scop minimizarea pătratului distanţei Euclidiene dintre probe. Algoritmul \emph{LLoyd} rezolvă această problema prin execuţia unei iniţializări (alegerea aleatorie a k centre) şi repetarea a doi paşi principali, până când problema converge la un minim local. Paşii executaţi sunt : 
+\begin{itemize}
+\item Atribuie fiecare element unei grupe. Elementul este atribuit grupei faţă de care criteriul de selecţie(pătratul distanţei Euclidiene faţă de centrul grupei) este minim.
+\item Recalculează noi centre pentru fiecare grupa, pe baza noilor elemente. Centrele sunt calculate făcând media elementelor din fiecare grupă. 
+\end{itemize}
+\subsection{Clasificare multi-class folosind SVM}
+\quad Folosind categoriile de normalitate obţinute la pasul anterior, putem spune că faţă de o anumită categorie \emph{i}, celelalte k-1 categorii reprezintă categorii \emph{artificial} anormale. Le numim \emph{artifical} anormale deoarece în mod obiectiv ele sunt acţiuni normale pentru sistemul de dectare a anomaliilor, dar pentru antrenarea unor clasificatori conform schemei one-vs-rest acestea sunt tratate drept anormale. Astfel, putem antrena un clasificator binar g(i) în aşa fel încat să separăm elementele din categoria i de cele din categoriile \{1,2...k\}/i 
+generând funcţia : \[f_{i}(x) = \sum_{j  = 1}^{n} w_{j} * x_{j} + b\], unde x \(\in{R}^n\) reprezintă vectorul de caracteristici, w este vectorul de parametri a funcţiei, iar b reprezintă bias-ul funcţiei. \cite{ionescu2019object}.
 \par Astfel, generăm k astfel de funcţii corespunzătoare celor k clasificatori ce vor fi folosiţi pentru a stabili daca un eveniment este anormal. Conform schemei one-vs-rest, un eveniment este anormal daca este clasificat drept anormal de către toţi cei k clasificatori.
-\vfill
+\par Funcţia \(f_{i}\) reprezintă un SVM (maşină cu vectori suport) ce are ca scop clasificarea unor probe în diferite clase. În timpul perioadei de antrenare un SVM construieşte un hiperplan ce separă cât mai precis datele de antrenare în 2 clase conform etichetelor acestora, maximizând distanţa minimă faţă de planul de decizie. Astfel, scopul unei maşini cu vectori suport este găsirea unui \(\vec{w} \) minim(norma acestuia sa fie minimă)  astfel încât: \( y_{i}(\vec{w} \cdot \vec{x_{i}} - b) \ge 1, \quad \)pentru toţi \( 1 \le i \le n.\), unde \(y_{i} \) reprezintă eticheta probei \(x_{i}\). Ce înseamnă ca toate probele etichetate cu 1 se află de o parte a planului de decizie, şi toate probele etichetate cu -1 se află de cealaltă parte. 
+
 \section{Etapa de inferenţă}
 \quad În cadrul etapei de inferenţă, sistemul foloseşte detectorul de obiecte, autoencoderele pre-antrenate şi cei k clasificatori binari pentru a stabili dacă un anumit eveniment este sau nu anormal. Astfel, parcursul sistemului este următorul :
 \begin{itemize}
@@ -220,9 +229,22 @@ Dezvoltatorul se ocupă doar de aplicaţia/serverul propriu zis, crează pachetu
 \par Aşa cum se poate observa în figura ~\ref{fig:client_design}, API-ul este creat în aşa fel încât evaluarea se face pentru fiecare cadru în parte. Dezvoltatorul ce implementează clientul pentru API are doar responsabilitatea urcării cadrelor necesare într-un spaţiu S3 prestabilit. Preprocesarea, extragerea obiectelor din imagine, şi rularea detecţiei de anomalii sunt toate executate in cloud. Astfel, efortul computaţional asupra clientului este minim. La momentul accesării API-ului, serverul trebuie să primeasca ca parametru în apelul HTTP cheia de acces pentru cadrele urcate de catre client. Folosind această informaţie, pe server se descarcă aceste cadre şi sunt analizate pentru a detecta anomaliile din cadrul central. Ca şi rezultat, clientul primeşte scorul de anormalitate al cadrului împreună cu toate poziţiile obiectelor anormale din cadru, date ce pot fi folosite pentru notificări ulterioare sau diferite aplicaţii pe partea de client. Un avantaj important al unui HTTP API este abilitatea de a fi accesat prin internet, interfaţa API-ului fiind accesibilă pentru toţi utilizatorii fară să necesite instrucţiuni speciale, precum \emph{SOAP} ce este bazat pe \emph{XML}.
 
 \section {Tehnologii folosite în dezvoltarea interfeţei}
-\quad Pentru a putea vizualiza capacităţile sistemului de detecţie a anomaliilor, am dezvoltat un program ce simulează cele 2 moduri în care poate fi acest sistem folosit : prin rulare locală, sau prin execuţie în cloud.
-\par Pentru a creea interfaţa grafică, am ales să folosesc librăria \emph{EasyGui}. EasyGui este un modul pentru dezvoltarea rapidă a interfeţelor grafice în python. Spre deosebire de celelalte librării disponibile pentru dezvoltarea interfeţelor grafice, acesta nu este bazat pe evenimente, ci fiecare interacţiune cu interfaţa grafică este realizată prin apeluri sincrone ale metodelor modulului. 
-\par Un avantaj al acestei librării este că, deoarece abstractizează foarte eficient operaţiunile realizate în \emph{tkinter}(librăria standard pentru creerea interfeţelor grafice în python) programatorul poate creea elementele de bază a unei interfeţe fără a aprofunda modul de funcţionare a \emph{tkinter}. Un alt avantaj este faptul ca EasyGui nu adaugă depedinţe suplimentare, şi este disponibil atât pentru Python 2 cât si pentru Python 3.
+\quad Pentru a putea vizualiza capacităţile sistemului de detecţie a anomaliilor, am dezvoltat un program ce simulează cele 2 moduri în care poate fi acesta sistem folosit : prin rulare locală, sau prin execuţie în cloud.
+\par Pentru a creea interfaţa grafică, am ales să folosesc framework-ul \emph{Electron}. Electron este un framework creat pentru a facilita dezvoltarea de aplicaţii desktop cross-platform, folosind tehnologii web. Acesta este bazat pe \emph{Node.js} şi \emph{Chromium} şi pune la dispoziţia dezvoltatorului folosirea tehnologiilor web precum: 
+\begin{itemize}
+\item{HTML}
+\item{CSS}
+\item{JavaScript}
+\end{itemize}
+\par
+Datorită posibilităţii de a folosi tehnologii web pentru a dezvolta interfaţa unei aplicaţii desktop, se pot crea interfeţe atractive, stilizate şi aranjate astfel încât experienţa utilizării programului să fie cât mai bună. 
+\begin{figure}[h]
+\begin{center}
+        \includegraphics[width = 1\textwidth]{images/interfata}
+			 \caption{Pagina de start a aplicaţiei}
+			 \label{fig:interfata}
+\end{center}
+\end{figure}
 \par Programul creat simulează un client ce foloseşte sistemul de detecţie a anomaliilor şi anume : rulează detecţia de anomalii (local sau în cloud, în funcţie de metoda selectată) folosind o cameră video ataşată sistemului de pe care este rulat. Modul în care sunt evidenţiate evenimentele anormale este deasemenea configurabil :
 \begin{itemize}
 \item Modul standard : Încadrarea în cadrane verzi a obiectelor ce sunt detectate de către sistem ca având un comportament anormal. 
@@ -258,7 +280,7 @@ Odată cu viteza apare în schimb un dezavantaj în ceea ce priveşte detecţia 
 			 \label{fig:arhitectura_autoencoder}
 \end{center}
 \end{figure}
-\par În etapa de reducere a dimensionalităţii sunt definite şi antrenate autoencoderele pe baza imaginilor si gradienţilor extraşi din setul de date. Motivul pentru care obiectele sunt procesate de către autoencodere este că datorită antrenării doar pe obiectele din videourile de antrenare, acestea vor invăţa să reprezinte mai bine evenimentele normale. Astfel, atunci cand prin aceste autoencodere vor trece evenimente anormale, ce nu sunt asemanătoare cu cele de antrenament, autoencoderele vor genera o eroare de reconstrucţie ce va uşura sarcina clasificatorilor finali.
+\par În etapa de reducere a dimensionalităţii sunt definite şi antrenate autoencoderele pe baza imaginilor si gradienţilor extraşi din setul de date. Motivul pentru care obiectele sunt procesate de către autoencodere este că datorită antrenării doar pe obiectele din videourile de antrenare, acestea vor învăţa să reprezinte mai bine evenimentele normale. Astfel, atunci cand prin aceste autoencodere vor trece evenimente anormale, ce nu sunt asemanătoare cu cele de antrenament, autoencoderele vor genera o eroare de reconstrucţie ce va uşura sarcina clasificatorilor finali.
 \par Arhitectura aleasă pentru autoencodere este cea descrisă de \emph{Ionescu et al.}  \cite{ionescu2019object} şi constă intr-o arhitectură convoluţională rapidă, formată dintr-un encoder cu 3 blocuri convoluţional + max-pooling şi un decoder format din 3 blocuri upsampling + convoluţional. Fiecare autoencoder primeşte ca input date de dimensiune \(64 \times 64\) si creează după encoder un vector de caracteristici de dimensiune \(8 \times 8 \times 16\).  Structura detaliată a autoencoderelor este : 
 \begin{itemize}
 \item Stratul de intrare, de dimensiune \( 64 \times 64 \times 1\)
@@ -358,7 +380,7 @@ class AutoEncoderModel:
         input = np.expand_dims(image,axis = 0)
         encodings = self.encoder.predict(input)
         return encodings[0]
-\end{lstlisting}
+\end{lstlisting} \cite{2020autoencoders}
 \end{footnotesize}
 \begin{figure}[h]
 \begin{center}
