--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -100,6 +100,14 @@ edition = {1st}
   note = {Accesat la data de : 25-04-2020},
   howpublished = {\url{https://aws.amazon.com/elasticloadbalancing/}},
 }
+@misc{2020autoencoders,
+  key={zz6},
+  title={Building Autoencoders in Keras},
+  author={{Francois Chollet}},
+  note = {Accesat la data de : 15-04-2020},
+  howpublished = {\url{https://blog.keras.io/building-autoencoders-in-keras.html}},
+}
+
 
 @book{adam2017,
   author={ {Peng Qi} and  {Wei Zhou} and  {Jizhong Han}},
