--- a/DocumentLicenta/Licenta.tex
+++ b/DocumentLicenta/Licenta.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage[a4paper,inner = 0.5cm, outer = 0.5cm, top = 2cm, bottom = 2cm]{geometry}
 
-\usepackage[romanian]{babel}
+\usepackage[english,romanian]{babel}
 \usepackage{blindtext}
 \usepackage{fancyhdr}
 \usepackage{wrapfig}
@@ -11,6 +11,11 @@
 \usepackage{dirtytalk}
 \usepackage{url}
 \usepackage{listings}
+
+\renewenvironment{abstract}[1]
+  {\bigskip\selectlanguage{#1}%
+   \begin{center}\bfseries\abstractname\end{center}}
+  {\par\bigskip}
 
 \newcommand{\source}[1]{\caption*{Sursă: {#1}} }
 
@@ -79,13 +84,14 @@
     \end{center}
 \end{titlepage}
 \newgeometry{a4paper,inner = 1.7cm, outer = 2.7cm, top = 2cm, bottom = 2cm, bindingoffset = 1.2cm}
+\begin{abstract}{romanian}
+\par Având în vedere contextul actual, detectarea anomaliilor în video este un subiect de interes în mai multe arii, în mod special în securitatea publică. Putem spune că această problemă este încă nerezolvată, deoarece sistemele actuale, deocamdată, nu depăşesc  omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari în partea de inferență, făcând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezintă un maxim interes. Astfel, putem spune că dezvoltarea unui sistem capabil să transforme sistemele de supraveghere actuale în sisteme ce pot recunoaşte evenimente anormale  este un subiect ce poate revoluţiona domeniul supravegherii video. Această lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de \emph{Ionescu et al.} \cite{ionescu2019object}, dar optimizată pentru a putea fi rulată pe sisteme cu resurse hardware reduse. Obiectivul este obţinerea unei arhitecturi ce necesită resurse computaţionale reduse şi poate fi rulată atât local, cât şi în cloud, acolo unde este expusă etapa de inferenţă printr-un API. Scopul final este final este crearea unui cadru ce va permite convertirea unui sistem de supraveghere clasic într-unul inteligent doar prin integrarea acestui sistem de detecţie, fără a fi nevoie de schimbarea hardware-ului. Utilizarea unei soluţii PaaS pentru etapa de inferenţă rezolvă problema executării cererilor fără complexitatea creeri şi întreţinerii unei infrastructuri de maşini virtuale sau fizice. 
+\end{abstract}
+\begin{abstract}{english}\par Given the current context, detecting outliers or anomalous behavior in video is a subject of interest in a big number of domains, especially in public safety. Until now, it is said that the problem is yet to be solved because present state-of-the-art systems do not exceed human capability when it comes to anomaly detection. Another challenge of the anomaly detection systems is the high demand for computational resources, making it almost impossible running the system on existing hardware equipment present on current video surveillance systems. So it is acceptable to say that developing a system capable of transforming current surveillance systems into smart ones that can recognize anomalous behavior is a subject that can revolutionize the video surveillance domain. This thesis proposes an implementation of the state-of-the-art as presented by  \emph{Ionescu et al.} \cite{ionescu2019object}, but optimized for increased speed on systems that have lower hardware capabilities. The goal is to obtain an architecture that requires as little computational resources as possible and that can be run both locally on the machine, but also in the cloud. The end objective is obtaining a system that will make possible converting a classic video surveillance system into a smart one only by integrating the developed piece of software into the existing solution, without the need for hardware changes. 
+\end{abstract}
 \tableofcontents
 \pagenumbering{arabic}
 \setcounter{page}{2}
-\begin{abstract}
-\par Având în vedere contextul actual, detectarea anomaliilor în video este un subiect de interes în mai multe arii, în mod special în securitatea publică. Putem spune că această problemă este încă nerezolvată, deoarece sistemele actuale, deocamdată, nu depăşesc  omul cand vine vorba de detectarea anomaliilor. De asemenea, o altă problemă a sistemelor de detectare a anomaliilor în video este nevoia acestora de resurse computaţionale mari în partea de inferență, făcând aproape imposibilă rularea acestora direct pe hardware-ul existent al sistemelor de supraveghere video actuale, acolo unde acestea prezintă un maxim interes. Astfel, putem spune că dezvoltarea unui sistem capabil să transforme sistemele de supraveghere actuale în sisteme ce pot recunoaşte evenimente anormale  este un subiect ce poate revoluţiona domeniul supravegherii video. Această lucrare îşi propune o implementare al sistemului state-of-the-art la momentul redactării, aşa cum este prezentat de \emph{Ionescu et al.} \cite{ionescu2019object}, dar optimizată pentru a putea fi rulată pe sisteme cu resurse hardware reduse. Obiectivul este obţinerea unei arhitecturi ce necesită resurse computaţionale reduse şi poate fi rulată atât local, cât şi în cloud, acolo unde este expusă etapa de inferenţă printr-un API. Scopul final este final este crearea unui cadru ce va permite convertirea unui sistem de supraveghere clasic într-unul inteligent doar prin integrarea acestui sistem de detecţie, fără a fi nevoie de schimbarea hardware-ului. Utilizarea unei soluţii PaaS pentru etapa de inferenţă rezolvă problema executării cererilor fără complexitatea creeri şi întreţinerii unei infrastructuri de maşini virtuale sau fizice. 
-\end{abstract}
-
 \chapter{Introducere}
 \section{Motivatie}
 \quad Detectarea anomaliilor în video este în strânsă legătură cu sistemele de supraveghere inteligente, un domeniu care a fost şi este de interes pentru mine. La rândul lor, sistemele de supraveghere inteligente, au o mare importanţă în securitatea publică. Cu toţii ne dorim o lume în care apelurile de urgenţă în caz de incendiu se fac automat, alunecările de teren sunt descoperite înainte să fie prea târziu, iar oamenii rău intenţionaţi sunt opriţi înainte să se întâmple tragedii. 
